Fix for searchbutton on iOS

--- a/static/css/baselayout.css
+++ b/static/css/baselayout.css
@@ -146,7 +146,7 @@ a:hover {
 }
 .searchterminput{
     float: left;
-    width: 190px;
+    width: 185px;
     height: 14px;
     margin: 9px 0 0 11px;
     border: none;
